Make position of Modal fixed so it properly covers when scrolling

--- a/src/styles/IntroductionModal.css
+++ b/src/styles/IntroductionModal.css
@@ -21,16 +21,12 @@ h1 {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
   text-align: center;
   z-index: 1000;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   padding-top: 48px;
   width: 100vw;
-  height: 100%;
-}
-
-.inner-modal {
-  height: 390px;
+  min-height: 100svh;
 }
 
 .instructions-container {
@@ -65,6 +61,6 @@ h1 {
 }
 
 .inner-modal {
-  width: 900px;
+  width: 1500px;
   min-height: 390px;
 }
